# kindle-scanner

./: .gitignore  pyproject.toml  requirements.txt
scripts/: capture.py  convert_pdf_to_md.py  create_pdf.py
src/: capture.py  create_pdf.py  create_txt.py
